--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/jadenlabs/rpj"
 readme = "README.md"
 categories = ["command-line-utilities"]
-keywords = ["cli", "project management", "productivity"]
+keywords = ["cli", "productivity"]
 
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
