--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["cli", "productivity"]
 
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
+colored = "3.0.0"
 dirs = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
