--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,10 @@ jobs:
             fail-fast: false
             matrix:
                 include:
+                    - build: win-msvc
+                      os: windows-latest
+                      rust: stable
+                      target: x86_64-pc-windows-msvc
                     - build: linux
                       os: ubuntu-latest
                       rust: stable
@@ -46,16 +50,16 @@ jobs:
                       os: macos-latest
                       rust: stable
                       target: x86_64-apple-darwin
-                    - build: win-msvc
-                      os: windows-latest
-                      rust: stable
-                      target: x86_64-pc-windows-msvc
         runs-on: ${{ matrix.os }}
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
               with:
                   fetch-depth: 1
+
+            - name: Install Rust target
+              if: matrix.os == 'macos-latest'
+              run: rustup target add x86_64-apple-darwin
 
             - name: Test
               run: cargo test --target ${{ matrix.target }}
