--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["command-line-utilities"]
 keywords = ["cli", "productivity"]
 
 [dependencies]
+anstyle = "1.0.11"
 assert_cmd = "2.0.17"
 clap = { version = "4.5.40", features = ["derive"] }
 colored = "3.0.0"
